# triagit

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/codescope/: config.py  database.py  main.py
src/codescope/analysis/: dependencies.py  router.py  schemas.py  service.py  utils.py
src/codescope/anthropic/: config.py
src/codescope/domains/analysis/: dependencies.py  router.py
src/codescope/domains/metrics/: service.py
src/codescope/domains/web/: router.py
src/codescope/github/: client.py  config.py  exceptions.py  schemas.py
src/codescope/inference/: service.py  tasks.py
src/codescope/llm/: config.py
src/codescope/web/: router.py
src/codescope/web/static/: style.css
src/codescope/web/templates/: error.html  landing.html  loading.html  report.html
src/llm-inference/: worker.py
src/llm-inference/huggingface/: client.py  exceptions.py  utils.py
src/llm-inference/inference/: schemas.py
src/triagit/: __main__.py  config.py  main.py
src/triagit/domains/metrics/: dependencies.py  router.py  schemas.py  service.py  utils.py
src/triagit/domains/review/: dependencies.py  prompts.py  router.py  schemas.py  service.py
src/triagit/domains/sampling/: dependencies.py  router.py  sampler.py  schemas.py  service.py
src/triagit/domains/shared/: schemas.py
src/triagit/domains/triage/: dependencies.py  prompts.py  router.py  schemas.py  service.py
templates/: landing.html  report.html
tests/: conftest.py
tests/analysis/: test_service_metrics.py
tests/infrastructure/github/: test_client_retries.py
(+18 files in other folders)
