[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codescope"
version = "0.1.0"
description = "A service for analyzing GitHub repositories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3",
    "huggingface-hub>=0.23",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "torch>=2.2",
    "transformers>=4.41",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["codescope*"]
namespaces = true
